<resources>
    <string name="app_name">EasyPhotoWaiver</string>
    <string name="agreement">I agree to the terms and conditions.</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="signature">Signature:</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="new_button">New Form</string>
    <string name="view_forms">Set Org Name</string>
    <string name="agree">I Agree</string>
    <string name="title">VIDEO and PHOTOGRAPH RELEASE FORM</string>
    <string name="org">Update</string>
    <string name="prompt">Start filling out a new form, or change the name of your organization</string>
    <string name="share">Upload Pdf</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="dialog_message">EasyWaive is designed to facilitate the collection of Photo and Video Recording Release Forms. To get started, set your organization name, email, and any other customizations you would like to make. Select new form to begin filling out a new waiver. After the signer is finished, an email will be sent to them, with your organization email as BCC. All emails entered by signers will also be stored in a file which can be viewed or uploaded, along with all forms, via the buttons on the home screen. Use of this application requires a subscription, or you can try it out with a 1 week free trial.</string>
    <string name="continue_button">Finished</string>
    <string name="thanks">Thank You!</string>
    <string name="welcome">Welcome!</string>
    <string name="set_org">Set your organization name</string>
    <string name="input">Type your name and email address, then sign the pad and save</string>
    <string name="set_banner">Set your welcome message</string>
    <string name="set_email">Set Org Email</string>
    <string name="set_background">Set Background</string>
    <string name="flag">Flag</string>
    <string name="default_bg">Default</string>
    <string name="preference_file_key">shared</string>
    <string name="thanks_message"> A copy of your release form will be sent to the email you provided.</string>

</resources>